--- a/app/src/main/res/layout/fragment_create_journal_entry.xml
+++ b/app/src/main/res/layout/fragment_create_journal_entry.xml
@@ -9,13 +9,12 @@
         android:layout_height="match_parent"
         tools:context=".UI.Fragments.CreateJournalCoverInfo">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/texteditor"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="16dp"
-            android:elevation="10dp"
-            android:orientation="vertical"
+            android:elevation="5dp"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
