--- a/app/src/main/res/layout/fragment_create_journal_index.xml
+++ b/app/src/main/res/layout/fragment_create_journal_index.xml
@@ -10,12 +10,11 @@
         tools:context=".UI.Fragments.CreateJournalCoverInfo">
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_marginHorizontal="16dp"
-            android:orientation="vertical"
             android:id="@+id/texteditor"
             android:layout_width="0dp"
-            android:elevation="10dp"
+            android:elevation="5dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
             app:layout_constraintEnd_toEndOf="parent"
