--- a/app/src/main/res/layout/fragment_sub__journal.xml
+++ b/app/src/main/res/layout/fragment_sub__journal.xml
@@ -100,7 +100,7 @@
             <HorizontalScrollView
                 android:scrollbars="none"
                 android:id="@+id/scrollview"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_7sdp"
                 android:orientation="horizontal"
@@ -109,7 +109,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/view12">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <ImageView
