--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -63,6 +63,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_all"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_16sdp"
@@ -75,6 +76,35 @@
             app:layout_constraintTop_toBottomOf="@+id/view2"
             app:layout_constraintVertical_bias="0.0"
             tools:listitem="@layout/item_chat" />
+
+        <RelativeLayout
+            android:visibility="visible"
+            android:id="@+id/layoutempty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:id="@+id/emptyuser"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_empty_user"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/emptytv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/emptyuser"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="No Users Found"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:visibility="visible" />
+        </RelativeLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
