--- a/app/src/main/res/layout/fragment_createjournalcover.xml
+++ b/app/src/main/res/layout/fragment_createjournalcover.xml
@@ -10,13 +10,13 @@
 
 
         <ImageView
-            android:background="@color/black_transparent"
-            android:elevation="1dp"
             android:id="@+id/ivBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_16sdp"
+            android:background="@color/black_transparent"
+            android:elevation="1dp"
             android:padding="@dimen/_8sdp"
             android:src="@drawable/back_white"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,13 +24,13 @@
 
 
         <TextView
-            android:background="@color/black_transparent"
-            android:elevation="1dp"
             android:id="@+id/checked"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_8sdp"
             android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:background="@color/black_transparent"
+            android:elevation="1dp"
             android:padding="@dimen/_8sdp"
             android:text="@string/next"
             android:textColor="@color/white"
@@ -66,13 +66,13 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
-                    android:singleLine="true"
-                    android:id="@+id/textView38"
+                    android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_16sdp"
                     android:background="@android:color/transparent"
                     android:fontFamily="@font/sfmedium"
+                    android:singleLine="true"
                     android:text="@string/daily_exercise"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_20sdp"
@@ -81,24 +81,24 @@
 
 
                 <EditText
+                    android:id="@+id/category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
                     android:clickable="false"
                     android:cursorVisible="false"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
-                    android:id="@+id/subtext"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
                     android:fontFamily="@font/sfmedium"
                     android:text="@string/select_category"
                     android:textColor="@color/appBlue"
                     android:textSize="@dimen/_14sdp"
-                    app:layout_constraintStart_toStartOf="@+id/textView38"
-                    app:layout_constraintTop_toBottomOf="@+id/textView38" />
+                    app:layout_constraintStart_toStartOf="@+id/title"
+                    app:layout_constraintTop_toBottomOf="@+id/title" />
 
 
                 <EditText
-                    android:id="@+id/subtext2"
+                    android:id="@+id/description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_16sdp"
@@ -110,8 +110,8 @@
                     android:text="@string/creator_text"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/textView38"
-                    app:layout_constraintTop_toBottomOf="@+id/subtext" />
+                    app:layout_constraintStart_toStartOf="@+id/title"
+                    app:layout_constraintTop_toBottomOf="@+id/category" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -140,7 +140,6 @@
             app:layout_constraintStart_toStartOf="parent" />
 
 
-
         <ImageView
             android:id="@+id/audience_setting"
             android:layout_width="wrap_content"
@@ -162,7 +161,6 @@
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toTopOf="@+id/image"
             app:layout_constraintVertical_bias="0.0" />
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
