--- a/app/src/main/res/layout/fragment_journal.xml
+++ b/app/src/main/res/layout/fragment_journal.xml
@@ -3,10 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".UI.Fragments.Journal">
+
+        <RelativeLayout
+            android:id="@+id/loader"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/fullblackpatti"
+            android:elevation="10dp">
+
+            <com.github.ybq.android.spinkit.SpinKitView
+                android:id="@+id/spin_kit"
+                style="@style/SpinKitView.Large.Circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                app:SpinKit_Color="@color/appBlue"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </RelativeLayout>
 
         <ImageView
             android:id="@+id/imageView"
@@ -30,17 +53,17 @@
             app:layout_constraintTop_toTopOf="@+id/imageView" />
 
         <EditText
-            android:imeOptions="actionSearch"
-            android:maxLines="1"
-            android:inputType="text"
-            android:layout_height="35dp"
             android:id="@+id/search"
             android:layout_width="0dp"
-            android:background="@drawable/round_border_edittext_search"
+            android:layout_height="35dp"
             android:layout_marginHorizontal="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_14sdp"
-            android:hint="@string/search"
+            android:background="@drawable/round_border_edittext_search"
             android:drawableStart="@drawable/ic_baseline_search_24"
+            android:hint="@string/search"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:maxLines="1"
             android:paddingStart="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +89,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view11" />
 
+
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/vpPager"
             android:layout_width="match_parent"
@@ -78,4 +102,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
