--- a/app/src/main/res/layout/item_journal.xml
+++ b/app/src/main/res/layout/item_journal.xml
@@ -6,28 +6,155 @@
     android:paddingHorizontal="@dimen/_8sdp"
     android:paddingBottom="@dimen/_16sdp">
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardView"
-        android:layout_width="@dimen/_48sdp"
-        android:layout_height="@dimen/_70sdp"
-        android:background="@drawable/round_border_edittext"
+        android:layout_width="70dp"
+        android:layout_height="110dp"
         android:elevation="0dp"
-        android:src="@drawable/image"
-        app:cardElevation="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <RelativeLayout
+            android:id="@+id/imagelayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:elevation="1dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginVertical="12dp"
+            app:layout_constraintBottom_toBottomOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/view"
+            app:layout_constraintTop_toTopOf="@+id/view">
+
+            <ImageView
+                android:id="@+id/journalImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="2dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/book_illustration" />
+
+        </RelativeLayout>
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/view"
+            android:layout_width="75dp"
+            android:layout_height="110dp"
+            android:background="@android:drawable/dialog_holo_light_frame"
+            android:backgroundTint="@color/journalGreen"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/view18"
+            android:layout_width="3dp"
+            android:layout_height="0dp"
+            android:layout_marginVertical="8dp"
+            android:layout_marginStart="10dp"
+            android:background="@color/fullblackpatti"
+            app:layout_constraintBottom_toBottomOf="@+id/view"
+            app:layout_constraintStart_toStartOf="@+id/view"
+            app:layout_constraintTop_toTopOf="@+id/view" />
+
+        <View
+            android:id="@+id/view16"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginHorizontal="2dp"
+            android:layout_marginBottom="2dp"
+            android:background="@color/fullblackpattihigh"
+            android:elevation="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imagelayout"
+            app:layout_constraintEnd_toEndOf="@+id/imagelayout"
+            app:layout_constraintStart_toStartOf="@+id/imagelayout"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/journalText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="3dp"
+            android:elevation="5dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/montserrat_regular"
+            android:maxLines="2"
+            android:text="The Shadow of the Wind"
+            android:textColor="@color/white"
+            android:textSize="4dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/view16"
+            app:layout_constraintStart_toStartOf="@+id/view16"
+            app:layout_constraintTop_toTopOf="@+id/view16" />
+
+        <View
+            android:id="@+id/view17"
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="40dp"
+            android:background="@color/line_grey"
+            android:elevation="5dp"
+            app:layout_constraintEnd_toEndOf="@+id/journalText"
+            app:layout_constraintStart_toStartOf="@+id/journalText"
+            app:layout_constraintTop_toBottomOf="@+id/journalText" />
+
+
+        <TextView
+            android:layout_marginTop="-4dp"
+            android:id="@+id/journalDesc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:elevation="5dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/montserrat_regular"
+            android:maxLines="2"
+            android:text="William Alexander Clouston"
+            android:textColor="@color/white"
+            android:textSize="3dp"
+            app:layout_constraintEnd_toEndOf="@+id/journalText"
+            app:layout_constraintStart_toStartOf="@+id/journalText"
+            app:layout_constraintTop_toBottomOf="@+id/view17" />
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/imgrecent1"
+            android:layout_width="2dp"
+            android:layout_height="2dp"
+            android:elevation="5dp"
+            android:src="@drawable/green"
+            app:layout_constraintBottom_toBottomOf="@+id/tvrecent1"
+            app:layout_constraintStart_toStartOf="@+id/journalDesc"
+            app:layout_constraintTop_toTopOf="@+id/tvrecent1" />
+
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tvrecent1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@drawable/red_book" />
+            android:layout_marginStart="@dimen/_2sdp"
+            android:elevation="5dp"
+            android:text="Recently Updated"
+            android:textColor="@color/white"
+            android:textSize="1dp"
+            app:layout_constraintStart_toEndOf="@+id/imgrecent1"
+            app:layout_constraintTop_toBottomOf="@+id/journalDesc" />
 
-    </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -49,7 +176,7 @@
         android:layout_marginTop="@dimen/_1sdp"
         android:ellipsize="end"
         android:fontFamily="@font/sfmedium"
-        android:lines="1"
+        android:lines="2"
         android:text="Wilfred Scawen Blunt"
         android:textSize="@dimen/_8sdp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,15 +204,11 @@
         app:layout_constraintTop_toTopOf="@+id/like_count" />
 
 
-
-
-
     <TextView
-
-        android:layout_marginStart="@dimen/_8sdp"
         android:id="@+id/like_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:drawablePadding="10dp"
         android:ellipsize="end"
@@ -116,18 +239,19 @@
         app:layout_constraintStart_toEndOf="@+id/comment" />
 
     <ImageView
+
         android:id="@+id/imgrecent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/green"
-        android:visibility="gone"
         android:layout_marginEnd="10dp"
+        android:src="@drawable/green"
         app:layout_constraintBottom_toBottomOf="@+id/comment_count"
         app:layout_constraintEnd_toStartOf="@+id/tvrecent"
         app:layout_constraintTop_toTopOf="@+id/comment_count" />
 
 
     <TextView
+
         android:id="@+id/tvrecent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -135,13 +259,13 @@
         android:text="Recently Updated"
         android:textColor="@color/black"
         android:textSize="@dimen/_8sdp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/comment_count"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/comment_count" />
 
 
     <View
+        android:layout_marginTop="-7dp"
         android:id="@+id/view3"
         android:layout_width="0dp"
         android:layout_height="1dp"
