--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -9,10 +9,10 @@
         android:orientation="vertical">
 
         <RelativeLayout
-            android:visibility="gone"
             android:id="@+id/layoutemptyNotifications"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone">
 
 
             <ImageView
@@ -40,6 +40,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".UI.Fragments.Notifications_Fragment">
+
+            <ImageView
+                android:id="@+id/followRequests"
+                android:padding="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/friends"
+                app:layout_constraintBottom_toBottomOf="@+id/textView16"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView16" />
 
             <TextView
                 android:id="@+id/textView16"
