--- a/app/src/main/res/layout/fragment_dashboard__approved.xml
+++ b/app/src/main/res/layout/fragment_dashboard__approved.xml
@@ -9,7 +9,51 @@
         android:layout_height="match_parent"
         tools:context=".UI.Fragments.DashboardApproved">
 
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/spinkit"
+            style="@style/SpinKitView.Large.Circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            app:SpinKit_Color="@color/appBlue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+
+        <RelativeLayout
+            android:visibility="visible"
+            android:id="@+id/layoutemptydoodle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/emptydoodle"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_empty_doodles"
+                android:visibility="visible" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/emptydoodle"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="No Doodle Pack Found"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:visibility="visible" />
+        </RelativeLayout>
+
         <androidx.recyclerview.widget.RecyclerView
+            android:visibility="gone"
             android:id="@+id/rv_dashboard_approved"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
