--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -131,11 +131,24 @@
                 app:layout_constraintStart_toStartOf="@+id/edtName"
                 app:layout_constraintTop_toBottomOf="@+id/password" />
 
+
+            <TextView
+                android:id="@+id/forgetPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp"
+                android:text="forget password?"
+                android:textColor="@color/appBlue"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="@+id/password"
+                app:layout_constraintTop_toBottomOf="@+id/password" />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_45sdp"
+                android:layout_marginTop="120dp"
                 android:background="@drawable/button"
                 android:text="Continue"
                 android:textAllCaps="false"
