--- a/app/src/main/res/layout/item_dashboard.xml
+++ b/app/src/main/res/layout/item_dashboard.xml
@@ -28,7 +28,7 @@
 
     <TextView
         android:layout_marginEnd="@dimen/_16sdp"
-        android:id="@+id/textView21"
+        android:id="@+id/value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_32sdp"
