--- a/app/src/main/res/layout/item_packtitle.xml
+++ b/app/src/main/res/layout/item_packtitle.xml
@@ -5,10 +5,11 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/item"
         android:layout_marginBottom="@dimen/_18sdp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:src="@drawable/add_doodle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
